Update style sheets

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body{
   display: flexbox;
   justify-content: center;
   align-content: center;
-  background : url(Realm.png);
+  background-image: url("Realm.png");
 }
 
 h1{
